--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -17,6 +17,8 @@ collections:
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Body", name: "body", widget: "markdown" }
+      - { label: "Categories", name: "categories", widget: "list" }
+      - { label: "Tags", name: "tags", widget: "list" }
   - name: "pages"
     label: "Pages"
     label_singular: "Page"
