--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -13,12 +13,11 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: "Title", name: "title", widget: "string" }
-      - { label: "Date", name: "date", widget: "datetime" }
+      - { label: "Title", name: "title", widget: "string", required: true }
+      - { label: "Date", name: "date", widget: "datetime", required: true }
       - { label: "Description", name: "description", widget: "string" }
       - { label: "Categories", name: "categories", widget: "list" }
       - { label: "Tags", name: "tags", widget: "list" }
-      - { label: "Body", name: "body", widget: "markdown" }
       - label: "Show Table of Contents"
         name: "showTableOfContents"
         widget: "boolean"
@@ -27,6 +26,8 @@ collections:
         name: "draft"
         widget: "boolean"
         default: true
+        required: true
+      - { label: "Body", name: "body", widget: "markdown" }
   - name: "pages"
     label: "Pages"
     label_singular: "Page"
