--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -8,7 +8,7 @@
 colorScheme = "congo"
 defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = true
-showAppearanceSwitcher = false
+showAppearanceSwitcher = true
 
 enableSearch = false
 enableCodeCopy = false
